examples/nested-protocols/ast-checks/invalid/RedefinedGlobal.scr
global protocol Duplicate(role A, role B) {}

global protocol Duplicate(role A, role B) {}